2010-02-25  Dirk Eddelbuettel  <edd@dexter>

	* inst/examples/mpi/: Added two variants using the C++ API to MPI

2010-02-23  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp: Add new parseEval() member function returning a SEXP
	* src/RInside.h: idem

	* src/inst/examples/standard/rinside_sample8.cpp: Show new parseEval()

2010-02-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/mpi/: Add examples contributed by Jianping Hua
	* inst/examples/: Update two existing examples to new Rcpp API

2010-02-12  Romain Francois <romain@r-enthusiasts.com>

	* src/MemBuf.h: MemBuf simplified using std::string

	* src/RInside.h: RInside gains an operator[](string) to allow
	treating the RInside instance as a proxy to the global environment
	so that we can do: RInside R; R["x"] = 10 ; All the actual work
	is done by the Rcpp::Environment class

2010-02-04  Romain Francois <francoisromain@free.fr>

	* RInside::autoloads revisited with the new Rcpp api

	* RInside gains a default constructor to be used when there
	is no command line arguments

2010-01-28  Romain Francois <francoisromain@free.fr>

	* src/RInside.{h,cpp}: Retire assign(vector<vector<double>> )
	because now this can be taken care of by template specialization

	* DESCRIPTION: require Rcpp 0.7.3.6

2010-01-28  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.{h,cpp}: Restore assign(vector<vector<double>>) which
	  is not (yet?) covered by the more general templated solution

	* src/RInside.h: Minor cleanup regarding logTxt usage

	* src/Makefile: Make sure we find Rcpp.h headers

2010-01-27  Romain Francois <francoisromain@free.fr>

	* src/RInside.{h,cpp}: include Rcpp.h and use the Rf_ prefixed R API
	functions. stop using macros from Rdefines because they don't
	work with R_NOREMAP

	* src/RInside.{h,cpp}: using the new Rcpp API assign becomes
	a template and let Rcpp::Environment.assign deal with the type
	of the object and how to wrap it. specializations of wrap